add weight to catalog type

--- a/src/Web/Backoffice/Pages/ProductType/Details.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Details.cshtml
@@ -77,11 +77,12 @@
             }
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ProductTypeModel.ShippingCost)
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Weight)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductTypeModel.ShippingCost)
+            @Html.DisplayFor(model => model.ProductTypeModel.Weight)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.MetaDescription)
         </dt>
