--- a/src/Web/Backoffice/Pages/ProductType/Create.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Create.cshtml
@@ -51,9 +51,9 @@
                 <span asp-validation-for="ProductTypeModel.FormFileTextHelpers" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductTypeModel.ShippingCost" class="control-label"></label>
-                <input asp-for="ProductTypeModel.ShippingCost" class="form-control decimal" />
-                <span asp-validation-for="ProductTypeModel.ShippingCost" class="text-danger"></span>
+                <label asp-for="ProductTypeModel.Weight" class="control-label"></label>
+                <input asp-for="ProductTypeModel.Weight" class="form-control" />
+                <span asp-validation-for="ProductTypeModel.Weight" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProductTypeModel.Picture" class="control-label"></label>
