--- a/src/Web/Backoffice/Pages/ProductType/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Delete.cshtml
@@ -70,11 +70,12 @@
             @Html.DisplayFor(model => model.ProductTypeModel.AdditionalTextPrice)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ProductTypeModel.ShippingCost)
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Weight)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductTypeModel.ShippingCost)
+            @Html.DisplayFor(model => model.ProductTypeModel.Weight)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.MetaDescription)
         </dt>
