--- a/src/Web/Backoffice/Pages/ProductType/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Edit.cshtml
@@ -45,6 +45,11 @@
                 <span asp-validation-for="ProductTypeModel.AdditionalTextPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ProductTypeModel.Weight" class="control-label"></label>
+                <input asp-for="ProductTypeModel.Weight" class="form-control" />
+                <span asp-validation-for="ProductTypeModel.Weight" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ProductTypeModel.FormFileTextHelpers" class="control-label"></label>
                 <input type="file" asp-for="ProductTypeModel.FormFileTextHelpers" class="form-control" multiple />
                 <small>(se mais que uma foto, o utilizador terá que escolher uma)</small><br />
@@ -63,11 +68,6 @@
                         <a asp-page="./Edit" asp-page-handler="RemoveAdditionalImages" asp-route-id="@Model.ProductTypeModel.Id" class="btn btn-danger" role="button">Remover imagens</a>
                     </div>
                 }
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductTypeModel.ShippingCost" class="control-label"></label>
-                <input asp-for="ProductTypeModel.ShippingCost" class="form-control decimal" />
-                <span asp-validation-for="ProductTypeModel.ShippingCost" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProductTypeModel.Picture" class="control-label"></label>
