add shipping price weight table

--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
                             <li><a asp-page="/Products/Index">Produtos</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a asp-page="/ShopConfig/Index">Loja</a></li>
+                            <li><a asp-page="/ShippingPrice/Index">Tabela de Preço/Peso</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a asp-page="/Orders/Index">Encomendas</a></li>
                             <li role="separator" class="divider"></li>
