--- a/src/Web/DamaWeb/Pages/Tag/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Tag/Index.cshtml
@@ -30,6 +30,9 @@
             </div>
         }
     </div>
-    @await Html.PartialAsync("_pagination", Model.CatalogModel.PaginationInfo, new ViewDataDictionary(ViewData) { { "SearchFor", Model.Tag }, { "TagName", Model.TagName },  { "TypeId", Model.CatalogModel.TypesFilterApplied }, { "IllustrationId", Model.CatalogModel.IllustrationFilterApplied } })
+    @if (Model.CatalogModel.CatalogItems.Count() > 0)
+    {
+        @await Html.PartialAsync("_pagination", Model.CatalogModel.PaginationInfo, new ViewDataDictionary(ViewData) { { "SearchFor", Model.Tag }, { "TagName", Model.TagName }, { "TypeId", Model.CatalogModel.TypesFilterApplied }, { "IllustrationId", Model.CatalogModel.IllustrationFilterApplied } })
+    }
 </div>
 
