--- a/src/Web/Backoffice/Pages/ShopConfig/Create.cshtml
+++ b/src/Web/Backoffice/Pages/ShopConfig/Create.cshtml
@@ -47,8 +47,20 @@
             <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.Picture" class="control-label"></label>
                 <input type="file" asp-for="ShopConfigDetailModel.Picture" class="form-control" />
-                <small>(1120x453)</small>
+                <small>(1110x414)</small>
                 <span asp-validation-for="ShopConfigDetailModel.Picture" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ShopConfigDetailModel.PictureWebp" class="control-label"></label>
+                <input type="file" asp-for="ShopConfigDetailModel.PictureWebp" class="form-control" />
+                <small>(1110x414)</small>
+                <span asp-validation-for="ShopConfigDetailModel.PictureWebp" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ShopConfigDetailModel.PictureMobile" class="control-label"></label>
+                <input type="file" asp-for="ShopConfigDetailModel.PictureMobile" class="form-control" />
+                <small>(525x)</small>
+                <span asp-validation-for="ShopConfigDetailModel.PictureMobile" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="ShopConfigDetailModel.ShopConfigId" />
             <div class="form-group">
