--- a/src/Web/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Edit.cshtml
@@ -74,7 +74,7 @@
             <div class="form-group">
                 <label asp-for="ProductModel.Picture" class="control-label"></label>
                 <input type="file" asp-for="ProductModel.Picture" class="form-control" />
-                <small>(quadrado)</small>
+                <small>(469*469)</small>
                 <span asp-validation-for="ProductModel.Picture" class="text-danger"></span>
                 <img src="@Model.ProductModel.PictureUri" class="img-responsive" />
                 <input type="hidden" asp-for="ProductModel.PictureUri" />
