--- a/src/Web/DamaWeb/Pages/Product/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/Index.cshtml
@@ -9,7 +9,7 @@
                 <div class="slider-nav">
                     @foreach (var item in Model.ProductModel.ProductImagesUri)
                     {
-                        <div><img src="@item" class="img-thumbnail" alt="@Model.ProductModel.ProductTitle" /></div>
+                        <div><img src="@item.Medium" class="img-thumbnail" alt="@Model.ProductModel.ProductTitle - Presentes Personalizados - Dama no Jornal&reg;" /></div>
                     }
                 </div>
                 <a href="#" class="bottom-arrow"><i class="fas fa-chevron-down"></i></a>
@@ -19,7 +19,7 @@
                 <div class="slider-for">
                     @foreach (var item in Model.ProductModel.ProductImagesUri)
                     {
-                        <div><img src="@item" class="img-fluid" alt="@Model.ProductModel.ProductTitle" /></div>
+                        <div><img src="@item.Medium" class="img-fluid" alt="@Model.ProductModel.ProductTitle - Presentes Personalizados - Dama no Jornal&reg;" /></div>
                     }
                 </div>
             </div>
