--- a/src/Web/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Create.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label asp-for="ProductModel.Description" class="control-label"></label>
                 <textarea asp-for="ProductModel.Description" class="form-control" rows='5'></textarea>
-                <span asp-validation-for="ProductModel.Description" class="text-danger"></span>
+                <span asp-validation-for="ProductModel.Description" class="text-danger"></span>                
             </div>
             <div class="form-group required">
                 <label asp-for="ProductModel.CatalogTypeId" class="control-label"></label>
@@ -87,6 +87,7 @@
                 <label asp-for="ProductModel.MetaDescription" class="control-label"></label>
                 <textarea asp-for="ProductModel.MetaDescription" class="form-control"></textarea>
                 <span asp-validation-for="ProductModel.MetaDescription" class="text-danger"></span>
+                <small>(se vazio assume a meta description do tipo produto)</small>
             </div>
             <div class="form-group">
                 <label asp-for="ProductModel.Title" class="control-label"></label>
