--- a/src/Web/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Edit.cshtml
@@ -86,6 +86,8 @@
                 <label asp-for="ProductModel.MetaDescription" class="control-label"></label>
                 <textarea asp-for="ProductModel.MetaDescription" class="form-control"></textarea>
                 <span asp-validation-for="ProductModel.MetaDescription" class="text-danger"></span>
+                <small>se vazio assume o nome do produto seguido da meta description do tipo produto:</small>
+                <small>@Model.ProductModel.CatalogTypeMeta</small>
             </div>
             <div class="form-group">
                 <label asp-for="ProductModel.Title" class="control-label"></label>
