--- a/src/Web/DamaWeb/Pages/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/_productDetail.cshtml
@@ -68,7 +68,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancelar</button>
-                    <button type="submit" class="btn btn-sm btn-menta" asp-page="/Product/Index" asp-page-handler="SendMessage" >Enviar</button>
+                    <button type="submit" class="btn btn-sm btn-menta" asp-page="/Product" asp-page-handler="SendMessage" >Enviar</button>
                 </div>
             </div>
         </div>    
@@ -100,7 +100,6 @@
                     <a id="btnAddName" class="btn btn-sm btn-menta w-100" role="button" data-toggle="collapse" href="#addName">ADICIONAR</a>
                 </div>
             </div>
-            @*<small id="nameInputText" class="text-muted ml-3 dama-small-text"></small>*@
             <div id="addName" class="collapse">
                 <div class="col mb-4 border border-menta px-4 pt-3">
                     <div class="form-group row">
@@ -120,10 +119,7 @@
                             {
                                 <div class="col" fileName="@item.PictureFileName"><img src="@item.PictureUri" alt="Dama no Jornal" class="img-thumbnail" /></div>
                             }
-                        </div>@*<div class="col-5 col-md-4">
-                <a id="saveName" class="btn btn-primary rounded-0 w-100" role="button" data-toggle="collapse" href="#addName">GRAVAR</a>
-            </div>*@
-
+                        </div>
                     }
 
                     <div class="row">
