--- a/src/Web/DamaWeb/Pages/Product/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/Index.cshtml
@@ -1,131 +1,4 @@
 ﻿@page
 @model DamaWeb.Pages.Product.IndexModel
 
-<div class="row mt-md-5">
-    <div class="col-md-7">
-        <div class="row align-items-center">
-            <div class="dama-product-thumbnails col-3 text-center">
-                <a href="#" class="top-arrow"><i class="fas fa-chevron-up"></i></a>
-                <div class="slider-nav">
-                    @foreach (var item in Model.ProductModel.ProductImagesUri)
-                    {
-                        <div><img src="@item.Medium" class="img-thumbnail" alt="@Model.ProductModel.ProductTitle - Presentes Personalizados - Dama no Jornal&reg;" /></div>
-                    }
-                </div>
-                <a href="#" class="bottom-arrow"><i class="fas fa-chevron-down"></i></a>
-            </div>
-            <div class="col-12 col-md-9 text-center">
-                <h1 class="dama-product-title-mobile pt-1 pb-1">@Model.ProductModel.ProductTitle</h1>
-                <div class="slider-for">
-                    @for (int i = 0; i < Model.ProductModel.ProductImagesUri.Count; i++)
-                    {
-                        <div><img src="@Model.ProductModel.ProductImagesUri[i].Medium" class="img-fluid" alt="@Model.ProductModel.ProductTitle @(i+1) - Presentes Personalizados - Dama no Jornal&reg;" /></div>
-                    }
-                </div>
-            </div>
-        </div>
-        <div class="col mt-4">            
-            <a href="javascript:history.go(-1)" class="text-menta link-underline" >&larr; Voltar</a>
-        </div>
-    </div>
-    <div class="col-md-5">
-        @if (!string.IsNullOrEmpty(Model.StatusMessage))
-        {
-            <div class="alert alert-success text-center">@Model.StatusMessage</div>
-        }
-
-        @await Html.PartialAsync("_productDetail", Model.ProductModel)
-    </div>
-</div>
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script>
-        var customizePrice = parseFloat('@Model.ProductModel.CustomizePrice'.replace(',', '.'));
-        var customizePictureFileName = "";
-        $(document).ready(function () {
-            $('.slider-nav').slick({
-                slidesToShow: 3,
-                slidesToScroll: 1,
-                arrows: true,
-                vertical: true,
-                prevArrow: $('.top-arrow'),
-                nextArrow: $('.bottom-arrow'),
-                focusOnSelect: true,
-                asNavFor: '.slider-for'
-            });
-
-            $('.slider-for').slick({
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                arrows: false,
-                fade: true,
-                asNavFor: '.slider-nav',
-                responsive: [
-                    {
-                        breakpoint: 992,
-                        settings: {
-                            infinite: true,
-                            arrows: true,
-                            centerMode: true,
-                        }
-                    }]
-            });
-            $('#btnAdd').on('click', function () {
-                var value = $('#ProductQuantity').val();
-                if (value)
-                    $('#ProductQuantity').val(parseInt(value) + 1);
-                else
-                    $('#ProductQuantity').val(1);
-            });
-            $('#btnSub').on('click', function () {
-                var value = $('#ProductQuantity').val();
-                if (value && parseInt(value) > 1)
-                    $('#ProductQuantity').val(parseInt(value) - 1);
-                else
-                    $('#ProductQuantity').val(1);
-            });
-            
-            //Main Customize Show/hide Click Event
-            $('#customizeSection').on('shown.bs.collapse', function () {
-                $('#btnCustomize').removeClass("btn-outline-pink").addClass('btn-outline-menta');
-            });
-            $('#customizeSection').on('hidden.bs.collapse', function () {
-                $('#btnCustomize').removeClass("btn-outline-menta").addClass('btn-outline-pink');
-            });
-
-            //Add Name Click Event
-            $('#addName').on('shown.bs.collapse', function () {
-                $('#btnAddName').removeClass('btn-menta').addClass('btn-outline-menta');
-                $('#divCustomizeTotal').hide();
-                $('#txtDeliveryStockTime').hide();
-            });
-            $('#addName').on('hidden.bs.collapse', function () {
-                $('#btnAddName').removeClass('btn-outline-menta').addClass('btn-menta');
-                $('#divCustomizeTotal').show();
-                $('#txtDeliveryStockTime').show();
-            });
-
-            //Select Image Event
-            $('#divSelectImage .col').click(function () {
-
-                $(this).toggleClass('dama-customize-color-selected');
-                $(this).siblings().removeClass('dama-customize-color-selected');
-                if ($(this).hasClass('dama-customize-color-selected'))
-                    customizePictureFileName = $(this).attr('fileName');
-                else
-                    customizePictureFileName = null;
-                
-                $('#CustomizePictureFileName').val(customizePictureFileName);
-            }); 
-            
-            $('#referenceProducts').on('change', function () {
-                if ($(this).val() != '@Model.ProductModel.ProductSKU') {
-                    var url = '@Url.Page("/Product/Index", new { id = "SLUG" })';
-                    url = url.replace('SLUG', $(this).val());
-                    window.location.href = url;
-                }
-            });
-            
-        });
-    </script>
-}
+<h1>Estamos a redereccionar, por favor aguarde...</h1>
