--- a/src/Web/Backoffice/Pages/ShopConfig/Create.cshtml
+++ b/src/Web/Backoffice/Pages/ShopConfig/Create.cshtml
@@ -47,13 +47,13 @@
             <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.Picture" class="control-label"></label>
                 <input type="file" asp-for="ShopConfigDetailModel.Picture" class="form-control" />
-                <small>(1110x414)</small>
+                <small>(1600x)</small>
                 <span asp-validation-for="ShopConfigDetailModel.Picture" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.PictureWebp" class="control-label"></label>
                 <input type="file" asp-for="ShopConfigDetailModel.PictureWebp" class="form-control" />
-                <small>(1110x414)</small>
+                <small>(1600x)</small>
                 <span asp-validation-for="ShopConfigDetailModel.PictureWebp" class="text-danger"></span>
             </div>
             <div class="form-group">
