--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -145,10 +145,10 @@
                 </section>
                 <section class="col-12 col-sm-4 footer-links text-center">
                     <div class="footer-link text-center">
-                        <a href="https://www.damanojornal.com/faq/">FAQ</a>
+                        <a href="https://www.damanojornal.com/perguntas-frequentes/">Perguntas Frequentes</a>
                     </div>
                     <div class="footer-link text-center">
-                        <a href="https://www.damanojornal.com/eventos/">Eventos</a>
+                        <a href="https://www.damanojornal.com/proximos-eventos/">Eventos</a>
                     </div>
                     <div class="footer-link text-center">
                         <a href="https://www.damanojornal.com/contactos/">Contactos</a>
