--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Create.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Create.cshtml
@@ -46,6 +46,13 @@
                 </div>
             </div>
             <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="CatalogItem.IsFeatured" /> Destaque
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-default" />
             </div>
         </div>
