--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Edit.cshtml
@@ -47,6 +47,13 @@
                     </label>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="CatalogItem.IsFeatured" /> Destaque
+                    </label>
+                </div>
+            </div>
             <input type="hidden" asp-for="CatalogItem.Id" />
             <input type="hidden" asp-for="CatalogItem.PictureUri" />
             <div class="form-group">
