--- a/src/Web/SalesWeb/Pages/_product.cshtml
+++ b/src/Web/SalesWeb/Pages/_product.cshtml
@@ -13,7 +13,7 @@
         <span>&nbsp; @Model.Price.ToString("N2")</span>
     </div>
     <div class="ml-auto">
-        <input class="btn btn-primary" type="submit" value="ADICIONAR" />
+        <input class="btn btn-primary btn-add-product" type="submit" value="ADICIONAR" />
     </div>
     <input type="hidden" asp-for="CatalogItemId"  />
     <input type="hidden" asp-for="CatalogItemName"/>
