migrate Backoffice to newsite

--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Details.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Details.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.CatalogType.Code)
         </dd>
         <dt>
-            Descrição
+            Nome
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CatalogType.Description)
+            @Html.DisplayFor(model => model.CatalogType.Name)
         </dd>
         <dt>
             Preço
