--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Edit.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="CatalogType.Code" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CatalogType.Description" class="control-label">Descrição</label>
-                <input asp-for="CatalogType.Description" class="form-control" />
-                <span asp-validation-for="CatalogType.Description" class="text-danger"></span>
+                <label asp-for="CatalogType.Name" class="control-label">Descrição</label>
+                <input asp-for="CatalogType.Name" class="form-control" />
+                <span asp-validation-for="CatalogType.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CatalogType.Price" class="control-label">Preço</label>
