--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Index.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Index.cshtml
@@ -18,7 +18,7 @@
                 Código
             </th>
             <th>
-                Descrição
+                Nome
             </th>
             <th>
                 Preço
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Code)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
