--- a/src/Web/Backoffice/Pages/Category/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Category/Edit.cshtml
@@ -47,6 +47,16 @@
                 <span asp-validation-for="Category.Title" class="text-danger"></span>
                 <small>(se vazio assume o nome da categoria)</small>
             </div>
+            <div class="form-group">
+                <label asp-for="Category.H1Text" class="control-label"></label>
+                <input asp-for="Category.H1Text" class="form-control" />
+                <span asp-validation-for="Category.H1Text" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Category.Description" class="control-label"></label>
+                <textarea asp-for="Category.Description" class="form-control" rows="5"></textarea>
+                <span asp-validation-for="Category.Description" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="Category.Id" />
             <div class="form-group">
                 <input type="submit" value="Gravar" class="btn btn-default" />
