--- a/src/Web/Backoffice/Pages/ProductType/Details.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Details.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.ProductTypeModel.Code)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ProductTypeModel.Description)
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductTypeModel.Description)
+            @Html.DisplayFor(model => model.ProductTypeModel.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.Slug)
@@ -93,13 +93,31 @@
             @Html.DisplayNameFor(model => model.ProductTypeModel.Title)
         </dt>
         <dd>
-            @(!string.IsNullOrEmpty(Model.ProductTypeModel.Title) ? Model.ProductTypeModel.Title : Model.ProductTypeModel.Description)
+            @(!string.IsNullOrEmpty(Model.ProductTypeModel.Title) ? Model.ProductTypeModel.Title : Model.ProductTypeModel.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.PictureUri)
         </dt>
         <dd>
             <img src="@Model.ProductTypeModel.PictureUri" class="img-responsive" />
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.H1Text)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.H1Text)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Description)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.Description)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Question)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.Question)
         </dd>
     </dl>
 </div>
