--- a/src/Web/Backoffice/Pages/ProductType/Index.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Index.cshtml
@@ -17,7 +17,7 @@
                 @Html.DisplayNameFor(model => model.ProductTypesModel[0].Code)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductTypesModel[0].Description)
+                @Html.DisplayNameFor(model => model.ProductTypesModel[0].Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProductTypesModel[0].CategoriesName)
@@ -53,7 +53,7 @@
                 @Html.DisplayFor(modelItem => item.Code)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @string.Join(",", item.CategoriesName)
