fix index page layout

--- a/src/Web/DamaWeb/Pages/_product.cshtml
+++ b/src/Web/DamaWeb/Pages/_product.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CatalogItemViewModel
 
-    <form asp-page="/Basket/Index" method="post">
+    <form asp-page="/Basket/Index" method="post" class="text-center">
         <a asp-page="/Product" asp-route-id="@Model.ProductSlug">
             <img class="esh-catalog-thumbnail" src="@Model.PictureUri" alt="@Model.CatalogItemName - Presentes Personalizados - Dama no Jornal&reg;" />
         </a>
