--- a/src/Web/DamaWeb/wwwroot/css/shared/footer.css
+++ b/src/Web/DamaWeb/wwwroot/css/shared/footer.css
@@ -13,7 +13,7 @@
 .dnj-app-footer {
     background-color: #FF96BE;
     padding-bottom: 2.5rem;
-    margin-top: -50px;
+    padding-top: 2.5rem;
 }
 
 .footer-links {
